frontend/build-final.txt

> online-appointment-booking@0.1.0 build
> vite build

[36mvite v5.4.21 [32mbuilding for production...[36m[39m
transforming...
node:internal/process/promises:394
    triggerUncaughtException(err, true /* fromPromise */);
    ^

[Failed to load PostCSS config: Failed to load PostCSS config (searchPath: C:/Users/navdh/Documents/online_appointment project): [Error] Loading PostCSS Plugin failed: Cannot find module '../../data/browsers'
Require stack:
- C:\Users\navdh\Documents\online_appointment project\node_modules\caniuse-lite\dist\unpacker\browsers.js
- C:\Users\navdh\Documents\online_appointment project\node_modules\caniuse-lite\dist\unpacker\agents.js
- C:\Users\navdh\Documents\online_appointment project\node_modules\browserslist\index.js
- C:\Users\navdh\Documents\online_appointment project\node_modules\autoprefixer\lib\autoprefixer.js
- C:\Users\navdh\Documents\online_appointment project\postcss.config.js

(@C:\Users\navdh\Documents\online_appointment project\postcss.config.js)
Error: Loading PostCSS Plugin failed: Cannot find module '../../data/browsers'
Require stack:
- C:\Users\navdh\Documents\online_appointment project\node_modules\caniuse-lite\dist\unpacker\browsers.js
- C:\Users\navdh\Documents\online_appointment project\node_modules\caniuse-lite\dist\unpacker\agents.js
- C:\Users\navdh\Documents\online_appointment project\node_modules\browserslist\index.js
- C:\Users\navdh\Documents\online_appointment project\node_modules\autoprefixer\lib\autoprefixer.js
- C:\Users\navdh\Documents\online_appointment project\postcss.config.js

(@C:\Users\navdh\Documents\online_appointment project\postcss.config.js)
    at load (file:///C:/Users/navdh/Documents/online_appointment%20project/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33632:11)
    at file:///C:/Users/navdh/Documents/online_appointment%20project/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33657:16
    at Array.map (<anonymous>)
    at plugins (file:///C:/Users/navdh/Documents/online_appointment%20project/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33656:8)
    at processResult (file:///C:/Users/navdh/Documents/online_appointment%20project/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33726:14)
    at file:///C:/Users/navdh/Documents/online_appointment%20project/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33856:14]

Node.js v24.13.0
